--- a/diapos/RadiacionSolar.tex
+++ b/diapos/RadiacionSolar.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-16 lun 17:37
+% Created 2020-11-16 lun 20:31
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -67,9 +67,9 @@
 \maketitle
 
 \section{Introducción}
-\label{sec:org7e2d9a5}
+\label{sec:orgf576069}
 
-\begin{frame}[label={sec:org15ac504}]{Radiación Solar y Sistemas Fotovoltaicos}
+\begin{frame}[label={sec:orgf1bce69}]{Radiación Solar y Sistemas Fotovoltaicos}
 \begin{itemize}
 \item La \alert{energía producida} por un sistema fotovoltaico depende principalmente de la \alert{radiación incidente} en el generador.
 
@@ -81,7 +81,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgb1fd44d}]{La radiación solar no se puede calcular analíticamente}
+\begin{frame}[label={sec:orge18ae45}]{La radiación solar no se puede calcular analíticamente}
 \begin{itemize}
 \item La radiación solar que alcanza la superficie terrestre es el resultado de complejas interacciones en la atmósfera.
 \item Para estimar la radiación se requiere medidas terrestres o imágenes de satélite.
@@ -91,7 +91,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3c5b864}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org262c8b2}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un \alert{ángulo de inclinación positivo} para maximizar el rendimiento.
 \item Este ángulo depende de la \alert{latitud} del lugar y de la \alert{aplicación del sistema}.
@@ -102,7 +102,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge00b2f0}]{Bases de Datos de Radiación Solar}
+\begin{frame}[label={sec:org9afd5ca}]{Bases de Datos de Radiación Solar}
 \begin{itemize}
 \item Por tanto, es inviable mantener una base de datos de radiación solar \alert{incidente}.
 \item Las \alert{bases de datos} registran radiación en el \alert{plano horizontal}.
@@ -111,18 +111,18 @@
 \end{frame}
 
 
-\begin{frame}[label={sec:org301f9d4}]{Del plano horizontal al plano inclinado}
+\begin{frame}[label={sec:org31b9827}]{Del plano horizontal al plano inclinado}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada.pdf}
 \end{center}
 \end{frame}
 
 \section{Geometría Sol y Tierra}
-\label{sec:org3218743}
+\label{sec:orgaeeed44}
 \subsection{Movimiento Sol-Tierra}
-\label{sec:org5736f6f}
+\label{sec:orgce913db}
 
-\begin{frame}[label={sec:org42dd0a4}]{Movimiento terrestre}
+\begin{frame}[label={sec:org7e5040c}]{Movimiento terrestre}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
 \end{center}
@@ -144,7 +144,7 @@ eclíptica}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2c7f03d}]{Movimiento terrestre}
+\begin{frame}[label={sec:org5d22d17}]{Movimiento terrestre}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{center}
@@ -170,9 +170,9 @@ Entre plano ecuatorial y línea que une Tierra y Sol: ángulo variable, \emph{de
 
 
 \subsection{Ángulos Solares}
-\label{sec:orge012a5b}
+\label{sec:orga419f5b}
 
-\begin{frame}[label={sec:orgbfe0678},plain]{Ejes terrestres}
+\begin{frame}[label={sec:org037b524},plain]{Ejes terrestres}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -193,7 +193,7 @@ Entre plano ecuatorial y línea que une Tierra y Sol: ángulo variable, \emph{de
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5756791}]{Declinación}
+\begin{frame}[label={sec:org9d91ead}]{Declinación}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/Declinacion.pdf}
 \end{center}
@@ -204,7 +204,7 @@ Entre plano ecuatorial y línea que une Tierra y Sol: ángulo variable, \emph{de
 \end{frame}
 
 
-\begin{frame}[label={sec:orgaa11334}]{Estaciones}
+\begin{frame}[label={sec:org1f44839}]{Estaciones}
 \begin{itemize}[<+->]
 \item \alert{Solsticio de junio} 
 \begin{itemize}[<.->]
@@ -245,7 +245,7 @@ hemisferio Norte.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgfe21d9b}]{Hora Solar}
+\begin{frame}[label={sec:orgd76b056}]{Hora Solar}
 \begin{itemize}
 \item \(w\), diferencia entre instante en curso y el mediodía solar (\(w = 0\), \(\psi_s = 0\)).
 \item Criterio de signos: \(w < 0\) antes del mediodía.
@@ -262,13 +262,13 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgfe58768}]{Duración del día}
+\begin{frame}[label={sec:org8e22e5c}]{Duración del día}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DuracionDia.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org865731e},plain]{Ejes locales}
+\begin{frame}[label={sec:orgb30ce99},plain]{Ejes locales}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -291,7 +291,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{frame}
 
 
-\begin{frame}[label={sec:org373e1bd}]{Relación entre sistemas de coordenadas}
+\begin{frame}[label={sec:orgf89cdf5}]{Relación entre sistemas de coordenadas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RelacionSistemasCoordenadas.pdf}
 \end{center}
@@ -301,7 +301,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4174634},plain]{Cenit Solar}
+\begin{frame}[label={sec:org237cf03},plain]{Cenit Solar}
 \[
 \cos(\theta_{zs}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
 \]
@@ -322,7 +322,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgb094c38},plain]{Azimut solar}
+\begin{frame}[label={sec:org211396a},plain]{Azimut solar}
 \[
   \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
 \]
@@ -343,14 +343,14 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org6be1514}]{Trayectoria Solar (\(60\degree N\))}
+\begin{frame}[label={sec:org5e29c2e}]{Trayectoria Solar (\(60\degree N\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar60N.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org1138ee3}]{Trayectoria Solar (\(40\degree S\))}
+\begin{frame}[label={sec:org99ce6e4}]{Trayectoria Solar (\(40\degree S\))}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar40S.pdf}
 \end{center}
@@ -358,8 +358,8 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 
 
 \subsection{Hora solar y oficial}
-\label{sec:orgb78ff5b}
-\begin{frame}[label={sec:orgaada4aa}]{Hora solar}
+\label{sec:orga721fff}
+\begin{frame}[label={sec:orgc7af6df}]{Hora solar}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
 \begin{itemize}
@@ -371,7 +371,7 @@ La longitud del día, \(|2 \cdot \omega_s|\), depende de \(\phi\) y \(d_n\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbcc7b61}]{Hora oficial}
+\begin{frame}[label={sec:orga67d57c}]{Hora oficial}
 \begin{itemize}
 \item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
 que sirve de referencia para una zona determinada.
@@ -388,7 +388,7 @@ horario. \emph{\(\Delta\lambda\) es positiva cuando la localidad está situada a
 \end{frame}
 
 
-\begin{frame}[label={sec:org023a773}]{Tiempo solar medio}
+\begin{frame}[label={sec:org63280e1}]{Tiempo solar medio}
 \begin{itemize}
 \item \alert{La duración del día solar real}, definido como el tiempo que
 transcurre entre dos pasos consecutivos del Sol por el meridiano
@@ -400,7 +400,7 @@ duración del día solar real.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge9b278c}]{Ecuación del Tiempo}
+\begin{frame}[label={sec:orgad27440}]{Ecuación del Tiempo}
 \[
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
       M+3.5884\right)\right)
@@ -414,11 +414,11 @@ M=\frac{2\pi}{365.24}\cdot d_{n}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org40629cc}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:org7af0f77}]{Ejemplo de cálculo}
 Calcula la hora solar real correspondiente al día 23 de Abril de 2010 a las 12 de la mañana, hora oficial de la ciudad de A Coruña, Galicia. Esta localidad está contenida en el meridiano de longitud \(8.38\degree\mathrm{W}\) y su hora oficial está regida por el huso horario GMT+1.
 \end{frame}
 
-\begin{frame}[label={sec:org3ed17c7}]{}
+\begin{frame}[label={sec:orgfd4ef54}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -427,12 +427,12 @@ Calcula la hora solar real correspondiente al día 23 de Abril de 2010 a las 12 
 \end{frame}
 
 \section{Radiación Solar en la Superficie Terrestre}
-\label{sec:orga44a62b}
+\label{sec:org13392fa}
 
 \subsection{Radiación Extra-atmosférica}
-\label{sec:org7a6258e}
+\label{sec:orgcbd5a82}
 
-\begin{frame}[label={sec:org1deed53}]{Irradiancia e Irradiación}
+\begin{frame}[label={sec:org20891bf}]{Irradiancia e Irradiación}
 \begin{description}
 \item[{Irradiancia}] es la densidad de \emph{potencia} de radiacion solar incidente en una superficie.
 \begin{itemize}
@@ -445,14 +445,14 @@ Calcula la hora solar real correspondiente al día 23 de Abril de 2010 a las 12 
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org8085158}]{Definición}
+\begin{frame}[label={sec:orgd82c3c0}]{Definición}
 \begin{itemize}
 \item \alert{Radiación extra-atmosférica}: radiación directa del Sol que alcanza la superficie de la atmósfera.
 
 \item \alert{Constante solar} \(B_{0}=\SI{1367}{\watt\per\meter\squared}\) (irradiancia solar sobre la superficie normal al vector solar en el límite superior de la atmósfera terrestre)
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgf937623}]{Ecuaciones}
+\begin{frame}[label={sec:org20e1c1c}]{Ecuaciones}
 \begin{itemize}
 \item \alert{Irradiancia extra-atmosférica} (\(\si{\watt\per\meter\squared}\))
 
@@ -470,7 +470,7 @@ B_{0d}(0)=-\frac{24}{\pi}B_{0}\epsilon_{0}\cdot\left(\omega_{s}\sin\phi\sin\delt
 \end{frame}
 
 
-\begin{frame}[label={sec:org9f157b1}]{Días promedio}
+\begin{frame}[label={sec:org321fb47}]{Días promedio}
 \begin{itemize}
 \item Es posible demostrar que el \alert{promedio mensual} de esta irradiación
 diaria \alert{coincide numericamente} con el valor de irradiación diaria
@@ -499,19 +499,19 @@ Mes & Jul & Ago & Sep & Oct & Nov & Dic\\
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org622e4b7}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:org2cf9791}]{Ejemplo de cálculo}
 Calcula la irradiación diaria extra-atmosférica en el plano horizontal del día 18 de septiembre (\(d_n = 261\)) en un lugar de latitud 40\degree N.
 \end{frame}
 
 \subsection{Radiación solar en la superficie terrestre}
-\label{sec:org3ef07a8}
-\begin{frame}[label={sec:orgfd6d574}]{}
+\label{sec:org8a7123f}
+\begin{frame}[label={sec:org18b2f2b}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_G0.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgbed80ca}]{Interacción de la radiación con la atmósfera}
+\begin{frame}[label={sec:org74463f7}]{Interacción de la radiación con la atmósfera}
 \begin{itemize}
 \item \alert{Disminución} de la radiación incidente en la superficie terrestre
 (reflexión en nubes)
@@ -528,7 +528,7 @@ partículas)
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgdb859ba}]{Componentes de la radiación solar}
+\begin{frame}[label={sec:orgf2bc017}]{Componentes de la radiación solar}
 \begin{itemize}
 \item \alert{Radiación Directa}. (B)
 
@@ -556,10 +556,10 @@ partículas)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2a28e9f}]{Cómo se escribe}
+\begin{frame}[label={sec:org51e6a82}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \begin{description}
-\item[{Forma+Tiempo+Lugar:}] Irradiancia directa (forma) horaria (tiempo)
+\item[{Forma+Tiempo+Lugar:}] Irradiación directa (forma) horaria (tiempo)
 en el plano del generador (lugar)
 
 \item[{Promedios:}] Media mensual (periodo) de la irradiación global
@@ -576,7 +576,7 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org153bb6e}]{Cómo se escribe}
+\begin{frame}[label={sec:orgd779ad5}]{Cómo se escribe}
 \begin{block}{Forma, tiempo, lugar}
 \[Forma_{tiempo,promedio}(lugar)\]
 
@@ -590,15 +590,15 @@ en el plano del generador (lugar)
 \end{block}
 \end{frame}
 \section{Cálculo de componentes de radiación solar}
-\label{sec:orga0ad760}
+\label{sec:org6b07094}
 
-\begin{frame}[label={sec:org3e17d06}]{}
+\begin{frame}[label={sec:org5096c19}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_componentes.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org425f1f3}]{Caracterización de la atmósfera}
+\begin{frame}[label={sec:org19568bb}]{Caracterización de la atmósfera}
 \begin{itemize}
 \item \alert{Masa de aire}:
 
@@ -627,7 +627,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org17acec9}]{Índice de claridad}
+\begin{frame}[label={sec:orgdcf8094}]{Índice de claridad}
 \begin{description}
 \item[{\(K_{T}\):}] índice de claridad instantáneo. \(K_{T}=G/B_{0}\)
 
@@ -639,7 +639,7 @@ movimiento aparente del sol}.
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org7c7a0bc}]{Estimación de Directa y Difusa}
+\begin{frame}[label={sec:org39c7809}]{Estimación de Directa y Difusa}
 \begin{itemize}
 \item Objetivo: Establecer una \alert{relación entre la fracción difusa} de la radiación horizontal (\(F_{D}=\frac{D(0)}{G(0)}\)) y \alert{el índice de claridad}.
 
@@ -649,7 +649,7 @@ movimiento aparente del sol}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc03fcfa},plain]{Medias mensuales: Ecuación de Page}
+\begin{frame}[label={sec:orgf0d863c},plain]{Medias mensuales: Ecuación de Page}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtMensual.pdf}
 \end{center}
@@ -657,11 +657,11 @@ movimiento aparente del sol}.
 \[F_{Dm}=1-1.13\cdot K_{Tm}\]
 \end{frame}
 
-\begin{frame}[label={sec:org7fb1aed}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:org7894317}]{Ejemplo de cálculo}
 Calcula las medias mensuales de las componentes de la irradiación en un lugar de latitud 40\degree N, cuya media mensual de irradiación global en el plano horizontal en el mes de septiembre es de \(G_{d,m}(0) = \SI{4150}{\watthour\per\meter\squared}\).
 \end{frame}
 
-\begin{frame}[label={sec:org52f996f},plain]{Valores Diarios: Collares-Pereira y Rabl}
+\begin{frame}[label={sec:org391e906},plain]{Valores Diarios: Collares-Pereira y Rabl}
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/FdKtDiario.pdf}
 \end{center}
@@ -675,7 +675,7 @@ F_{Dd} = \begin{cases}
 {\scriptsize \par}
 \end{frame}
 
-\begin{frame}[label={sec:org4374701}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orgb7534fc}]{Ejemplo de cálculo}
 Calcula las componentes directa y difusa de la radiación solar del 17
 de Septiembre (día 261) en un lugar con latitud
 \(\phi=\ang{40}\mathrm{N}\) y con irradiación global diaria horizontal
@@ -683,10 +683,10 @@ de Septiembre (día 261) en un lugar con latitud
 \end{frame}
 
 \section{Bases de Datos}
-\label{sec:org39d6c5b}
+\label{sec:org8d52f9a}
 \subsection{Introducción}
-\label{sec:org63463a5}
-\begin{frame}[label={sec:org6f76a51}]{Variabilidad Solar}
+\label{sec:orgac38fb8}
+\begin{frame}[label={sec:orgb2d574d}]{Variabilidad Solar}
 \begin{itemize}
 \item La \alert{radiación extra-atmosférica} se puede expresar de forma \alert{analítica} en función del día, hora y latitud.
 \item La \alert{radiación en la superficie terrestre} es un \alert{proceso estocástico} (aleatorio) debido a la interacción con la atmósfera.
@@ -696,7 +696,7 @@ de Septiembre (día 261) en un lugar con latitud
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgb375745}]{Estimaciones a Largo Plazo}
+\begin{frame}[label={sec:orgef81377}]{Estimaciones a Largo Plazo}
 \begin{itemize}
 \item Nos interesan \alert{estimaciones a largo plazo} del funcionamiento de los sistemas FV en una localización concreta.
 \item Las fuentes de datos de radiación solar deben:
@@ -707,7 +707,7 @@ de Septiembre (día 261) en un lugar con latitud
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc81a2cc}]{Variabilidad Temporal}
+\begin{frame}[label={sec:org25566e5}]{Variabilidad Temporal}
 \begin{center}
 \includegraphics[height=0.45\textheight]{../figs/VariabilidadRadiacionDiario.pdf}
 \end{center}
@@ -719,7 +719,7 @@ de Septiembre (día 261) en un lugar con latitud
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7a48cb9}]{Variabilidad Espacial}
+\begin{frame}[label={sec:org69d4c80}]{Variabilidad Espacial}
 \begin{center}
 \includegraphics[height=0.4\textheight]{../figs/SpatialVariability.jpg}
 \end{center}
@@ -731,7 +731,7 @@ de Septiembre (día 261) en un lugar con latitud
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5591d72}]{Resumen}
+\begin{frame}[label={sec:orga9a78e9}]{Resumen}
 \begin{block}{Requerimientos}
 Una estimación de la productividad de un SFV confiable y representativa en el largo plazo requiere:
 \begin{itemize}
@@ -742,8 +742,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Fuentes de Datos}
-\label{sec:org0b7c705}
-\begin{frame}[label={sec:orgbeab156}]{Estaciones Meteorológicas}
+\label{sec:orgcbd300e}
+\begin{frame}[label={sec:orgd1a0700}]{Estaciones Meteorológicas}
 \begin{itemize}
 \item Series temporales largas
 \item Alta resolución temporal (\(\SI{1}{\sec}\) - \(\SI{1}{\min}\))
@@ -759,7 +759,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 
-\begin{frame}[label={sec:orga9a0a7e}]{Imágenes de Satelite}
+\begin{frame}[label={sec:org28f12e5}]{Imágenes de Satelite}
 \begin{itemize}
 \item Baja resolución temporal (\(\SI{15}{\min}\) - \(\SI{1}{hora}\)).
 
@@ -775,7 +775,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org40e8cd2}]{Métodos Híbridos}
+\begin{frame}[label={sec:org9f1449f}]{Métodos Híbridos}
 \begin{itemize}
 \item Las medidas terrestres se mezclan con las estimaciones de satélite para mejorar la resolución espacial.
 \item Interpolación Espacial.
@@ -794,7 +794,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1722d23}]{Fuentes de Datos}
+\begin{frame}[label={sec:org47c390b}]{Fuentes de Datos}
 \url{https://github.com/oscarperpinan/mds/wiki}
 
 \begin{itemize}
@@ -815,8 +815,8 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{frame}
 
 \subsection{Control de Calidad}
-\label{sec:org42fb61d}
-\begin{frame}[label={sec:orga0420d4}]{Introducción}
+\label{sec:orgb0e59e7}
+\begin{frame}[label={sec:orgcd3b394}]{Introducción}
 \begin{itemize}
 \item Es necesario filtrar y corregir las medidas para eliminar datos erróneos y valores extremos.
 \begin{itemize}
@@ -827,7 +827,7 @@ Una estimación de la productividad de un SFV confiable y representativa en el l
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3827907}]{Límites Físicos}
+\begin{frame}[label={sec:orgf2aa409}]{Límites Físicos}
 \begin{itemize}
 \item El índice de claridad no puede ser mayor que 1 (la irradiación global diaria no puede superar la extra-atmosférica).
 \end{itemize}
@@ -847,14 +847,14 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org409790f}]{Coherencia Espacial}
+\begin{frame}[label={sec:org7503fa7}]{Coherencia Espacial}
 \begin{itemize}
 \item Las medidas de una estación se deben comparar con \alert{estaciones cercanas} (por ejemplo, mediante interpolación espacial).
 \item La comparación se debe realizar con \alert{valores agregados} (medias diarias o mensuales).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org48b1787}]{Análisis Estadístico de las Desviaciones}
+\begin{frame}[label={sec:orgbedbc0c}]{Análisis Estadístico de las Desviaciones}
 \begin{itemize}
 \item Desviaciones, \(\mathbf{D}\), entre observaciones, \(\mathbf{O}\), y un modelo, \(\mathbf{M}\) (u otro conjunto de observaciones):
 \end{itemize}
@@ -872,7 +872,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgddbd671}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
+\begin{frame}[label={sec:org69cf586}]{Exactitud (\emph{bias}) y Precisión (\emph{variance})}
 \begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/bias-variance.png}
 \end{center}
@@ -880,7 +880,7 @@ K_t = \frac{G_d(0)}{B_{0d}(0)} \geq 0.03
 \url{http://scott.fortmann-roe.com/docs/BiasVariance.html}
 \end{frame}
 
-\begin{frame}[label={sec:orgea16188}]{Métricas}
+\begin{frame}[label={sec:org0f7bd65}]{Métricas}
 \begin{itemize}
 \item \alert{Mean Bias Difference (MBD)}, diferencia media (indica si el modelo sobreestima o subestima):
 \end{itemize}
@@ -903,7 +903,7 @@ RMSD = \left(\frac{1}{n} \sum_{i=1}^n d_i^2 \right)^{1/2} =  \left( \frac{1}{n} 
 MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \left|m_i - o_i\right|
 \]
 \end{frame}
-\begin{frame}[label={sec:org36190a8}]{}
+\begin{frame}[label={sec:org53cdaa5}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
@@ -912,12 +912,12 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{frame}
 
 \section{Radiación Solar en Generadores FV}
-\label{sec:orgcbbf0c6}
+\label{sec:orgbc1fe75}
 
 \subsection{Introducción}
-\label{sec:org614d7f4}
+\label{sec:org6453cf0}
 
-\begin{frame}[label={sec:orgfc1be72}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org6bd51cf}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un ángulo de inclinación positivo para maximizar el rendimiento.
 \item Este ángulo depende de la latitud del lugar y de la aplicación del sistema.
@@ -928,7 +928,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8b85611}]{Definiciones}
+\begin{frame}[label={sec:org96ac8f6}]{Definiciones}
 \begin{itemize}
 \item \(\theta_s\), \alert{ángulo de incidencia (AOI)}, ángulo entre los rayos solares y la perpendicular al plano del generador.
 \item \(\alpha\): \alert{orientación del generador} (0º cuando está orientado al mediodía solar)
@@ -936,14 +936,14 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{frame}
 \subsection{Tipos de Sistemas}
-\label{sec:orga97d496}
-\begin{frame}[label={sec:orgbf1273f}]{Sistema Estático}
+\label{sec:org4478fba}
+\begin{frame}[label={sec:org7ec512a}]{Sistema Estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf9719de}]{Sistemas con seguimiento}
+\begin{frame}[label={sec:org6136c51}]{Sistemas con seguimiento}
 \begin{itemize}[<+->]
 \item \alert{Fundamento:}
 \begin{itemize}[<.->]
@@ -962,7 +962,7 @@ MAD = \frac{1}{n} \sum_{i=1}^n \left|d_i\right| =  \frac{1}{n} \sum_{i=1}^n \lef
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org5af1ce4}]{Algunos tipos de seguimiento solar}
+\begin{frame}[label={sec:org730f596}]{Algunos tipos de seguimiento solar}
 \begin{itemize}[<+->]
 \item \alert{Doble eje}
 \begin{itemize}[<.->]
@@ -990,21 +990,21 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgcf09fd2}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
+\begin{frame}[label={sec:orgbe91d0c}]{Sistema de Seguimiento(1 eje, horizontal N-S)}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc7af085}]{Sistema de Seguimiento (2x ejes)}
+\begin{frame}[label={sec:org4e75de8}]{Sistema de Seguimiento (2x ejes)}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/SeguidorReocin.jpg}
 \end{center}
 \end{frame}
 
 \subsection{Geometría de los sistemas fotovoltaicos}
-\label{sec:orgfa1c148}
-\begin{frame}[label={sec:org8aeb4eb},plain]{Ángulo de Incidencia Sistema Estático}
+\label{sec:org886c5e8}
+\begin{frame}[label={sec:orgf4b373a},plain]{Ángulo de Incidencia Sistema Estático}
 \begin{itemize}
 \item Si \(\alpha=0\)
 \end{itemize}
@@ -1021,7 +1021,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge0cf3a9}]{Sistema Estático: Ángulo de Incidencia}
+\begin{frame}[label={sec:org2d1a22e}]{Sistema Estático: Ángulo de Incidencia}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1032,7 +1032,7 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:orgd710fd5},plain]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org4e0444b},plain]{Ángulo de Incidencia Seguidor 1x NS}
 \[\cos(\theta_{s})=\cos(\delta)\sqrt{\sin^{2}(\omega)+\left(\cos(\omega)\cos(\phi)+\tan(\delta)\sin(\phi)\right)^{2}}\]
 
 \begin{center}
@@ -1040,7 +1040,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgbbef4bc}]{Ángulo de Inclinación Seguidor 1x NS}
+\begin{frame}[label={sec:orgef98f55}]{Ángulo de Inclinación Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1051,7 +1051,7 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:orged48c44}]{Ángulo de Incidencia Seguidor 1x NS}
+\begin{frame}[label={sec:org0dc0ad5}]{Ángulo de Incidencia Seguidor 1x NS}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1063,7 +1063,7 @@ necesarios),
 
 
 
-\begin{frame}[label={sec:orgdf8e9e7},plain]{Ángulo de Incidencia Seguidor 2x}
+\begin{frame}[label={sec:org80ea711},plain]{Ángulo de Incidencia Seguidor 2x}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
 \end{center}
@@ -1075,7 +1075,7 @@ necesarios),
   \cos(\theta_{s}) &= 1
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:orgca7db6f}]{Inclinación Seguidor 2x}
+\begin{frame}[label={sec:orgfc27974}]{Inclinación Seguidor 2x}
 \begin{itemize}
 \item \(40\degree N\)
 \end{itemize}
@@ -1086,14 +1086,14 @@ necesarios),
 
 
 \subsection{Irradiancia a partir de irradiación diaria}
-\label{sec:orged93116}
-\begin{frame}[label={sec:org624df39}]{}
+\label{sec:org5500b49}
+\begin{frame}[label={sec:org66f43b9}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_perfil.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgd2d599d}]{Planteamiento}
+\begin{frame}[label={sec:orge78ad5d}]{Planteamiento}
 \begin{itemize}
 \item \alert{Objetivo}: construir un perfil diario promedio de valores de \emph{irradiancia} global y difusa, \(G(0), D(0)\), a partir de valores de \emph{irradiación} global y difusa diaria, \(G_d(0), D_d(0)\).
 
@@ -1112,7 +1112,7 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label={sec:orgf9d2b97}]{Perfil}
+\begin{frame}[label={sec:org2e5d0c7}]{Perfil}
 \[D(0) = r_D \cdot D_{d}(0)\]
 
 \[G(0) = r_G \cdot G_{d}(0)\]
@@ -1121,7 +1121,7 @@ necesarios),
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7355c6c}]{Ecuaciones}
+\begin{frame}[label={sec:org0fa5f73}]{Ecuaciones}
 \[
 r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\cos(\omega_{s})-\sin(\omega_{s})}
 \]
@@ -1133,19 +1133,19 @@ r_D = \frac{B_{o}(0)}{B_{0d}(0)} = \frac{\pi}{24}\cdot\frac{\cos(\omega)-\cos(\o
 \[b=0.6609+0.4767\cdot\sin(\omega_{s}+\frac{\pi}{3})\]
 \end{frame}
 
-\begin{frame}[label={sec:org8660b5c}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:orgff62524}]{Ejemplo de cálculo}
 Calcula la irradiancia global y la irradiancia difusa en el plano horizontal 2 horas antes del mediodía del día 261 en un lugar con latitud \(\phi=\ang{40}\mathrm{N}\) y con media mensual de irradiación global diaria horizontal \(G_{d,m}(0)=\SI{4150}{\watthour\per\meter\squared}\).
 \end{frame}
 \subsection{Transformación al plano del generador}
-\label{sec:orgfe50cc3}
+\label{sec:org4d2dde5}
 
-\begin{frame}[label={sec:org68c5854}]{}
+\begin{frame}[label={sec:org6f7b4d7}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_inclinada.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org44eaffd}]{Planteamiento}
+\begin{frame}[label={sec:orgc04b20a}]{Planteamiento}
 \begin{itemize}
 \item \alert{Irradiancia Directa} \(B(\beta, \alpha)\): ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 \item \alert{Irradiancia Difusa}  \(D(\beta, \alpha)\): modelos del estado de cielo, modelo isotrópico o anisotrópico.
@@ -1157,13 +1157,13 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \]
 \end{frame}
 
-\begin{frame}[label={sec:org372bb9f}]{Irradiancia Directa}
+\begin{frame}[label={sec:orgd2c93d1}]{Irradiancia Directa}
 \alert{Irradiancia Directa}: ecuación analítica basada en geometría solar (ángulo cenital) y del generador (ángulo de incidencia).
 
 \[B(\beta,\alpha)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
 \end{frame}
 
-\begin{frame}[label={sec:org12560b1}]{Irradiancia Difusa}
+\begin{frame}[label={sec:orgefdc586}]{Irradiancia Difusa}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1171,7 +1171,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \[D(\beta,\alpha)=\intop_{\Omega}L(\theta_{z},\psi)\cdot\cos(\theta_{z}^{'})d\Omega\]
 \end{frame}
 
-\begin{frame}[label={sec:org3c0e495}]{Irradiancia Difusa Isotrópica}
+\begin{frame}[label={sec:orgbf939c5}]{Irradiancia Difusa Isotrópica}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1181,7 +1181,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 
 \[D(\beta,\alpha)=D(0)\cdot\frac{1+\cos(\beta)}{2}\]
 \end{frame}
-\begin{frame}[label={sec:orgc0d7f6c}]{Irradiancia Difusa Anisotrópica}
+\begin{frame}[label={sec:org96770c6}]{Irradiancia Difusa Anisotrópica}
 \[D(\beta,\alpha) = D^{I}(\beta,\alpha)+D^{C}(\beta,\alpha)\]
 
 \[D^{I}(\beta,\alpha) = D(0) \cdot (1-k_{1}) \cdot \frac{1 + \cos(\beta)}{2}\]
@@ -1191,7 +1191,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \[k_{1} = \frac{B(0)}{B_{0}(0)}\]
 \end{frame}
 
-\begin{frame}[label={sec:orgc288cd2}]{Irradiancia de Albedo}
+\begin{frame}[label={sec:orgdf16018}]{Irradiancia de Albedo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AnguloVisionCielo.pdf}
 \end{center}
@@ -1202,7 +1202,7 @@ G(\beta, \alpha) = B(\beta, \alpha) + D(\beta, \alpha) + R(\beta, \alpha)
 \[\rho=0.2\]
 \end{frame}
 
-\begin{frame}[label={sec:org9b46025}]{Ejemplo de cálculo}
+\begin{frame}[label={sec:org16c7f43}]{Ejemplo de cálculo}
 Calcula la irradiancia difusa, directa, de albedo y global, en un
 generador inclinado \(\ang{30}\) y orientado al Sur, 2 horas antes del
 mediodía del día 261 en un lugar con latitud \(\phi=\ang{40}\mathrm{N}\)
@@ -1211,38 +1211,38 @@ y con media mensual de irradiación global diaria horizontal
 \end{frame}
 
 \subsection{Pérdidas angulares y por suciedad}
-\label{sec:orgcd8c0e5}
+\label{sec:orgc55c9b6}
 
-\begin{frame}[label={sec:org4f4ac13}]{}
+\begin{frame}[label={sec:org82a8e7f}]{}
 \begin{center}
 \includegraphics[height=0.95\textheight]{../figs/ProcedimientoCalculoRadiacionInclinada_efectiva.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4cdf322}]{Radiación directa}
+\begin{frame}[label={sec:org2bab5ae}]{Radiación directa}
 \[B_{ef}(\beta,\alpha)=B(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot (1-FT_{B}(\theta_{s}))\]
 \begin{center}
 \includegraphics[height=0.7\textheight]{../figs/Suciedad.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge148a6e}]{Difusa y Albedo}
+\begin{frame}[label={sec:orgc200099}]{Difusa y Albedo}
 \begin{align*}
 D_{ef}^{iso}(\beta,\alpha) &= D^{iso}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{D}(\beta))\\
 D_{ef}^{cir}(\beta,\alpha) &= D^{cir}(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{B}(\theta_{s}))\\
 R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}(0)}\right]\cdot(1-FT_{R}(\beta))
 \end{align*}
 \end{frame}
-\begin{frame}[label={sec:org881157d}]{Pérdidas anuales}
+\begin{frame}[label={sec:orgef8a45f}]{Pérdidas anuales}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/GefVSG.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Radiación Efectiva según tipologías}
-\label{sec:org72c735f}
+\label{sec:org9652b1d}
 
-\begin{frame}[label={sec:orgcbbcd70}]{Radiación en Sistema estático}
+\begin{frame}[label={sec:org1ebb5f2}]{Radiación en Sistema estático}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/FixedKrig.pdf}
 \end{center}
@@ -1250,7 +1250,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:orgb2f8e6a}]{Radiación en Seguimiento Eje Horizontal}
+\begin{frame}[label={sec:orgbf32ffe}]{Radiación en Seguimiento Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizKrig.pdf}
 \end{center}
@@ -1258,14 +1258,14 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org0bbf11c}]{Radiación en Seguimiento Doble Eje}
+\begin{frame}[label={sec:org26963d7}]{Radiación en Seguimiento Doble Eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoKrig.pdf}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org95b3822}]{Comparación Doble Eje-Estática}
+\begin{frame}[label={sec:org344836a}]{Comparación Doble Eje-Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoFixed.pdf}
 \end{center}
@@ -1273,7 +1273,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org785da39}]{Comparación Doble Eje - Horizontal}
+\begin{frame}[label={sec:org37ae73b}]{Comparación Doble Eje - Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TwoHoriz.pdf}
 \end{center}
@@ -1281,7 +1281,7 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org0a56ced}]{Comparación Eje Horizontal - Estática}
+\begin{frame}[label={sec:org420cdd6}]{Comparación Eje Horizontal - Estática}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/HorizFixed.pdf}
 \end{center}
@@ -1289,20 +1289,20 @@ R_{ef}(\beta,\alpha) &= R(\beta,\alpha)\cdot\left[\frac{T_{sucio}(0)}{T_{limpio}
 
 
 
-\begin{frame}[label={sec:org1424b55}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org845bc88}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystems.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgfb0b734}]{Comparación entre Sistemas}
+\begin{frame}[label={sec:org20fb737}]{Comparación entre Sistemas}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/compSystemsG0.png}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:orge8605be}]{}
+\begin{frame}[label={sec:org6617079}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/Kahoot_Logo.png}
 \end{center}
