--- a/libro/EjerciciosGeometriaRadiacion.tex
+++ b/libro/EjerciciosGeometriaRadiacion.tex
@@ -104,7 +104,7 @@
   \epsilon_0 &= 1+0.033\cdot\cos(2\pi\cdot261/365) = 0.9928151\\
   \\
   B_{0d}(0) &= -\frac{24}{\pi}B_{0}\epsilon_{0}\cdot\left(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s}\right) = \\
-         &= \SI{8126.37}{\kilo\watthour\per\meter\squared}
+         &= \SI{8126.37}{\watthour\per\meter\squared}
 \end{align*}
 
 \item Calcula las medias mensuales de las componentes de la
