Actualiza parametros configuracion siunitx v2
Ver Table 51 – Mapping of version 1 options to version 2 https://osl.ugr.es/CTAN/macros/latex/contrib/siunitx/siunitx.pdf

--- a/libro/preambulo.tex
+++ b/libro/preambulo.tex
@@ -38,7 +38,7 @@
 \newunit{\wattpeak}{Wp}
 \newunit{\watthour}{Wh}
 \newunit{\amperehour}{Ah}
-\sisetup{per=fraction, fraction=nice, decimalsymbol=comma}
+\sisetup{per-mode=fraction, fraction-function=nice, output-decimal-marker=comma}
 %\usepackage{lscape}
 \usepackage{mathpazo}%Letra palatino con fuentes para matemáticas
 \usepackage{flafter}%obliga a que los flotantes aparezcan después de su referencia
